<resources>
    <string name="app_name">Saborear</string>
    <string name="cadastro_txt_criar">Criar uma nova conta</string>
    <string name="cadastro_nome">Nome</string>
    <string name="cadastro_telefone">Telefone</string>
    <string name="cadastro_senha">Senha</string>
    <string name="cadastro_entrar">Entrar</string>
    <string name="cadastro_email">Email</string>
    <string name="entrar_em_uma_conta">Entrar em uma conta</string>
    <string name="cadastro">Cadastro</string>
    <string name="esqueci_a_minha_senha">Esqueci a minha senha</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="perfil">Perfil</string>
    <string name="coloque_como_gostaria_de_ser_chamado">Coloque seu nome</string>
    <string name="coloque_seu_n_mero_de_telefone">Coloque seu número de telefone</string>
    <string name="coloque_sua_nova_senha">Coloque sua nova senha</string>
    <string name="confirme_a_sua_nova_senha">Confirme a sua nova senha</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="confirme_a_senha">Confirme a senha</string>
    <string name="deletar_sua_conta">Deletar sua conta</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="perfil_nome">Nome</string>
    <string name="perfil_telefone">Telefone</string>
    <string name="ajudar">Ajudar</string>
    <string name="sair_da_sua_conta">Sair da sua conta?</string>
    <string name="sair">Sair</string>
    <string name="cancelar">Cancelar</string>
    <string name="minhas_receitas_favoritas">Minhas receitas favoritas</string>
    <string name="pesquisar_por_nome">Pesquisar por nome</string>
    <string name="veja_os_coment_rios_deixados_por_outros_usu_rios">VEJA OS COMENTÁRIOS DEIXADOS POR OUTROS USUÁRIOS</string>
    <string name="salve_suas_receitas_favoritas">SALVE SUAS RECEITAS FAVORITAS</string>
    <string name="descubra_receitas_novas_e_compartilhe_a_sua_com_os_outros">DESCUBRA RECEITAS NOVAS E COMPARTILHE A SUA COM OS OUTROS</string>
    <string name="pr_ximo">Próximo</string>
    <string name="ponto">•</string>
    <string name="string_ponto">•</string>
    <string name="digite_aqui">Digite aqui...</string>
    <string name="comentar">Comentar</string>
    <string name="_0_500">(0/200)</string>
    <string name="c_digo">Código</string>
    <string name="redefinir_minha_senha">Redefinir minha senha</string>
    <string name="modo_escuro">Modo escuro</string>
    <string name="qntd">Quantidade (exemplo: 1 unidade ou 500 ml)</string>
    <string name="digite_o_nome_da_receita">Digite o nome da receita</string>
    <string name="digite_o_tempo_da_receita">Digite o tempo da receita</string>
    <string name="categoria_de_ingrediente">Categoria de ingrediente</string>
    <string name="categoria_de_receita">Categoria de receita</string>
    <string name="admin_nome">Nome</string>
    <string name="admin_nome_02">Nome</string>
    <string name="admin_nome_03">Categoria</string>
    <string name="admin_ingrediente">Ingrediente</string>
    <string name="titulo">Titulo</string>
    <string name="mensagem_da_notifica_o">Mensagem da notificação</string>
    <string name="mensagem">Mensagem</string>
    <string name="pr_visualiza_o">Pré-visualização</string>
    <string name="clique_para_abrir">Clique para abrir</string>
    <string name="imagem_da_receita">Imagem da receita</string>
    <string name="_0">0</string>
    <string name="imagem">Imagem</string>
    <string name="criar_uma_nova_conta">Criar uma nova conta</string>
    <string name="saborear_insta">\@saborear_cti</string>
    <string name="d_vidas_reclama_es_e_sugest_es_nentre_em_contato_conosco">Dúvidas, reclamações e sugestões?\nEntre em contato conosco!</string>
    <string name="saborearcti_gmail_com">saborearcti@gmail.com</string>
    <string name="quem_a_equipe_saborear">Quem é a equipe Saborear?</string>
    <string name="sobre"><![CDATA[Bem-vindo(a) ao nosso aplicativo de receitas! Somos uma equipe apaixonada por gastronomia e tecnologia, e nossa missão é oferecer a você uma experiência única e deliciosa no mundo da culinária. Queremos ser seu parceiro na cozinha, ajudando-o(a) a descobrir novas receitas, compartilhar suas criações e conectar-se com outros entusiastas da culinária.\n\n

O aplicativo Saborear surgiu como um projeto de conclusão do curso técnico em Informática, do Colégio Técnico Industrial “Prof. Isaac Portal Roldán”, da Unesp de Bauru.
Em meio ao avanço da culinária e a popularização dos fast-foods, nosso relacionamento com a comida se tornou rápido e superficial. Buscando retomar o prazer de cozinhar, decidimos criar um aplicativo que simule um livro de receitas que esteja sempre em mãos.\n\n

Nossa plataforma foi desenvolvida com muito carinho e dedicação para atender às suas necessidades e proporcionar momentos memoráveis na cozinha. Aqui, você encontrará um vasto catálogo de receitas, desde clássicos atemporais até inovações contemporâneas. Acreditamos que a culinária é uma arte que vai além do simples ato de preparar alimentos. É uma forma de expressão, uma maneira de compartilhar cultura e histórias, e, é claro, uma fonte de prazer para o paladar.\n\n

Esperamos que nosso aplicativo de receitas seja uma fonte constante de inspiração e que você se divirta explorando, experimentando e compartilhando suas receitas favoritas. Juntos, vamos criar um ambiente acolhedor e saboroso para todos os apaixonados por culinária.\n\n

Agradecemos por fazer parte da nossa comunidade e esperamos que você se sinta em casa no nosso aplicativo de receitas!\n\n
]]></string>
    <string name="ltima_atualiza_o_dd_mm_2023">Última atualização: 12/08/2023</string>
    <string name="termos">Última atualização: 12/08/2023\n\n

    Bem-vindo(a) a Saborear! Antes de utilizar nossos serviços, pedimos que você leia atentamente este Termo de Uso, pois ele estabelece os direitos e deveres tanto dos usuários quanto da equipe responsável pelo aplicativo. Ao acessar e utilizar nosso aplicativo, você concorda com os termos aqui dispostos, comprometendo-se a cumpri-los integralmente. Caso você não concorde com algum ponto deste Termo, pedimos que não prossiga com o uso do aplicativo.\n\n

    Sobre o Aplicativo:\n
    Nosso aplicativo é uma plataforma que permite aos usuários cadastrar, favoritar, comentar, avaliar e pesquisar receitas culinárias. Também disponibilizamos recursos para filtrar receitas por tipo de comida e ingredientes, além de fornecer dicas e substituições para atender a diferentes necessidades alimentares.\n\n

    Cadastro e Privacidade:\n
    2.1. Para utilizar algumas funcionalidades do aplicativo, o usuário deverá criar uma conta fornecendo informações verdadeiras e atualizadas.\n\n

    2.2. Comprometemo-nos a proteger a privacidade dos usuários de acordo com nossa Política de Privacidade. Ao utilizar o aplicativo, você concorda com a coleta e o tratamento de seus dados conforme descrito na Política de Privacidade.\n\n

    Direitos e Deveres dos Usuários:\n
    3.1. Ao cadastrar uma receita, o usuário declara que possui os direitos necessários para disponibilizá-la no aplicativo e autoriza sua divulgação pública.\n\n

    3.2. O usuário é responsável pelas informações que cadastra no aplicativo, incluindo ingredientes, modo de preparo e quaisquer outros detalhes. Não nos responsabilizamos por informações incorretas ou inadequadas fornecidas pelos usuários.\n\n

    3.3. O usuário concorda em não utilizar o aplicativo para fins ilegais, difamatórios, obscenos, ofensivos ou de qualquer forma prejudicial a terceiros.\n\n

    3.4. Ao deixar comentários nas receitas, o usuário compromete-se a manter um ambiente respeitoso, sem conteúdos abusivos, discriminatórios ou ofensivos.\n\n

    Propriedade Intelectual:\n
    4.1. Todo o conteúdo disponibilizado no aplicativo, incluindo textos, imagens, logotipos, marcas e layout, são protegidos por direitos autorais e outras leis de propriedade intelectual.\n\n

    4.2. O usuário reconhece que não tem direitos de propriedade sobre o conteúdo do aplicativo e não pode reproduzi-lo, distribuí-lo ou utilizá-lo de forma não autorizada.\n\n

    Responsabilidades e Limitações:\n
    5.1. O aplicativo é fornecido "como está", sem garantias de qualquer tipo. Não nos responsabilizamos por danos ou prejuízos decorrentes do uso do aplicativo ou da impossibilidade de utilizá-lo.\n\n

    5.2. Nosso aplicativo pode conter links para sites de terceiros. Não nos responsabilizamos pelo conteúdo, segurança ou políticas de privacidade desses sites.\n\n

    Modificações no Termo de Uso:\n
    6.1. Reservamo-nos o direito de modificar este Termo de Uso a qualquer momento, sem aviso prévio. Recomendamos que os usuários revisem periodicamente o documento para estar cientes de quaisquer alterações.\n\n

    Contato:\n
    7.1. Em caso de dúvidas, sugestões ou problemas relacionados ao aplicativo, entre em contato através do canal de suporte disponibilizado no aplicativo.\n\n

    Ao utilizar nosso aplicativo de receitas, você concorda com todos os termos e condições apresentados neste documento. Agradecemos por escolher nosso aplicativo e esperamos que aproveite ao máximo todas as funcionalidades oferecidas!\n\n

        Equipe Saborear. </string>
    <string name="condi_es_do_aplicativo">Condições do aplicativo</string>
    <string name="melhores_avalia_es">Melhores avaliações</string>
    <string name="seja_bem_vindo_a_ao_saborear">Seja bem-vindo(a) ao Saborear</string>
    <string name="melhores_drinks">Melhores drinks</string>
    <string name="nossas_sugest_es">Nossas sugestões</string>
    <string name="quais_permiss_es_eu_preciso_conceder_para_utilizar_o_aplicativo">Quais permissões eu preciso conceder para utilizar o aplicativo?</string>
    <string name="como_entro_em_contato_com_a_equipe_se_tiver_algum_problema_ou_sugest_o">Como entro em contato com a equipe se tiver algum problema ou sugestão?</string>
    <string name="como_fa_o_para_cadastrar_uma_nova_receita_no_aplicativo">Como faço para cadastrar uma nova receita no aplicativo?</string>
    <string name="posso_editar_ou_excluir_uma_receita_que_j_cadastrei">Posso editar ou excluir uma receita que já cadastrei?</string>
    <string name="sim_poss_vel_editar_suas_receitas_cadastradas_v_at_a_p_gina_da_receita_que_deseja_modificar_e_clique_no_bot_o_editar_para_excluir_uma_receita_acesse_a_mesma_p_gina_de_edi_o_e_selecione_a_op_o_excluir_receita_lembre_se_que_as_receitas_exclu_das_n_o_poder_o_ser_recuperadas">Sim, é possível editar suas receitas cadastradas. Vá até a página da receita que deseja modificar e clique no botão \'Editar\'. Para excluir uma receita, acesse a mesma página de edição e selecione a opção \'Excluir receita\'. Lembre-se que as receitas excluídas não poderão ser recuperadas.</string>
    <string name="para_favoritar_uma_receita_v_at_a_p_gina_da_receita_desejada_e_clique_no_cone_de_cora_o_para_acessar_suas_receitas_favoritas_basta_ir_ao_menu_minhas_receitas_favoritas_no_qual_estar_o_listadas_todas_as_receitas_que_voc_marcou_como_favoritas">Para favoritar uma receita, vá até a página da receita desejada e clique no ícone de \'Coração\'. Para acessar suas receitas favoritas, basta ir ao menu \'Minhas receitas favoritas\', no qual estarão listadas todas as receitas que você marcou como favoritas.</string>
    <string name="n_o_disponibilizamos_essa_op_o_mas_poss_vel_o_compartilhamento_do_aplicativo">Sim, é possível clicando no ícone de compartilhamento ao lado do coração na tela de alguma receita. </string>
</resources>