<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1BAA4A"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/saborear_backgroundz" />

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/saborear_logo_chapeu"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/login_entrarconta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/alata"
        android:text="@string/entrar_em_uma_conta"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_icon" />

    <ImageView
        android:id="@+id/login_box_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_entrarconta"
        app:srcCompat="@drawable/saborear_campo_01"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/login_box_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_box_email"
        app:srcCompat="@drawable/saborear_campo_01"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/login_icon_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/login_box_email"
        app:layout_constraintStart_toStartOf="@+id/login_box_email"
        app:layout_constraintTop_toTopOf="@+id/login_box_email"
        app:srcCompat="@drawable/saborear_icon_email" />

    <ImageView
        android:id="@+id/login_icon_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/login_box_senha"
        app:layout_constraintStart_toStartOf="@+id/login_box_senha"
        app:layout_constraintTop_toTopOf="@+id/login_box_senha"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@drawable/saborear_icon_senha" />

    <EditText
        android:id="@+id/login_insert_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/login_box_email"
        app:layout_constraintEnd_toEndOf="@+id/login_box_email"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/login_icon_email"
        app:layout_constraintTop_toTopOf="@+id/login_box_email"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/login_insert_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/senha"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/login_box_senha"
        app:layout_constraintEnd_toEndOf="@+id/login_box_senha"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/login_icon_senha"
        app:layout_constraintTop_toTopOf="@+id/login_box_senha"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/login_btn_entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#00FFFFFF"
        android:importantForAccessibility="no"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_box_senha"
        app:srcCompat="@drawable/saborear_btn_entrar"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/login_btn_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/alata"
        android:text="@string/criar_uma_nova_conta"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_entrar"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/login_btn_esqueci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/alata"
        android:text="@string/esqueci_a_minha_senha"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_cadastro"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/login_carregar"
        style="?android:attr/progressBarStyle"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:indeterminateTint="#000000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>